# uv-package

./: LICENSE  pyproject.toml
src/uv_package/: __init__.py
