[project]
name = "uv-package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "polars[all]>=1.41.0",
]

[project.scripts]
uv-package = "uv_package:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "marimo>=0.23.8",
    "quak>=0.3.5",
    "wigglystuff>=0.5.9",
]
